[package]
name = "rate-limiter"
version = "0.1.0"
description = "On-chain rate limiter built with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rate_limiter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
solana-program = "2.1.0"
